<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/width_match_height_match"
    android:orientation="vertical" >

    <!-- 顶部bar -->

    <RelativeLayout
        android:id="@+id/top_bar"
        style="@style/top_bar" >

        <ImageButton
            android:id="@+id/btn_back"
            style="@style/top_bar_btn"
            android:src="@drawable/btn_back_selector" />

        <TextView
            style="@style/top_bar_title_txt"
            android:text="@string/motion_timer" />

        <ImageButton
            android:id="@+id/btn_save"
            style="@style/top_bar_btn"
            android:layout_alignParentRight="true"
            android:src="@drawable/athome_btn_save_selector" />
    </RelativeLayout>

    <RelativeLayout
        style="@style/width_match_height_match"
        android:background="@drawable/main_background2"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <!-- 时间设置按钮 -->

        <RadioGroup
            android:id="@+id/tab_time_radiogroup"
            style="@style/width_match_height_wrap"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/tab_setting_left_button"
                style="@style/tab_setting"
                android:background="@drawable/athome_tab_setting_left_button_selector"
                android:text="@string/start_time" />

            <RadioButton
                android:id="@+id/tab_setting_right_button"
                style="@style/tab_setting"
                android:background="@drawable/athome_tab_setting_right_button_selector"
                android:text="@string/end_time" />
        </RadioGroup>

        <!-- 时间设置文字 -->

        <LinearLayout
            android:id="@+id/timer_selector"
            style="@style/width_match_height_wrap"
            android:gravity="center"
            android:layout_below="@+id/tab_time_radiogroup"
            android:layout_marginTop="50.0dp" >

            <TextView
                android:id="@+id/start_time"
                style="@style/time_txt" />

            <TextView
                style="@style/time_txt"
                android:text="@string/dash" />

            <TextView
                android:id="@+id/end_time"
                style="@style/time_txt" />
        </LinearLayout>

        <TextView
            android:id="@+id/desc"
            android:layout_below="@+id/timer_selector"
            style="@style/function_desc_text"
            android:text="@string/time_equal_recording_no"
            android:gravity="center"
            android:layout_marginTop="30.0dp" />
        
        <LinearLayout
            android:id="@+id/wheel_layout"
            style="@style/width_match_height_wrap"
            android:layout_alignParentBottom="true">
            
            <kankan.wheel.widget.WheelView
                android:id="@+id/hours"
                style="@style/time_wheel" />

            <kankan.wheel.widget.WheelView
                android:id="@+id/mins"
                style="@style/time_wheel" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>